Added simple message on top to display generic error message. Still unable to actually connect to S3 bucket however due to CORS issue.

--- a/src/ConnectToS3Bucket.scss
+++ b/src/ConnectToS3Bucket.scss
@@ -1,11 +1,22 @@
 .form-container {
-  display: flex;
   padding: 3em;
 }
 
 .s3-form {
   width: 50%;
   margin: auto;
+}
+
+.s3-message {
+  width: fit-content;
+  height: fit-content;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  text-align: center;
+}
+
+.error-message {
+  color: red;
 }
 
 @media (max-width: 479px) {
