--- a/src/App.scss
+++ b/src/App.scss
@@ -1,39 +1,43 @@
-#root{
+#root {
   height: 100%;
-  > div{
+  > div {
     height: 100%;
   }
 }
-
-.bucket-settings {
+.bucket-bar {
   display: flex;
-  justify-content: left;
-  vertical-align: middle;
-  span {
-    div {
-      margin: 10px;
-    }
-    
-    border-right: 1px solid rgba(204, 204, 204, 0.541);
-  }
-  span:last-child{
-    border-right: none
-
-  }
+  justify-content: space-between;
   border-bottom: 1px solid rgba(204, 204, 204, 0.425);
+  .bucket-buttons{
+    margin: auto 0;
+  }
+  .bucket-settings {
+    display: flex;
+    justify-content: left;
+    vertical-align: middle;
+    span {
+      div {
+        margin: 10px;
+      }
+      border-right: 1px solid rgba(204, 204, 204, 0.541);
+    }
+    span:last-child {
+      border-right: none;
+    }
+  }
 }
+
 .menu {
   margin-bottom: 0 !important;
 }
 
-.bucket-path{
+.bucket-path {
   display: flex;
   background-color: #f7f7f7a9;
   padding: 10px;
   border-bottom: 1px solid rgba(204, 204, 204, 0.541);
 }
 
-.file-container{
+.file-container {
   padding: 10px;
-  
 }
