Uploading files now shows tags that need to be filled in
Still a work in progress

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,9 @@
 .file-container {
   padding: 10px;
   .file-card {
+    // img {
+    //   background-image: url("https://react.semantic-ui.com/images/wireframe/square-image.png");
+    // }
     cursor: pointer;
     div {
       object-fit: scale-down !important;
