--- a/src/components/schema-form/SchemaForm.scss
+++ b/src/components/schema-form/SchemaForm.scss
@@ -3,9 +3,9 @@
 }
 
 .button-fit-content {
-  width: fit-content !important;
+  align-self: flex-end;
 }
 
 .field-row {
-  margin: 2em !important;
+  // margin: 2em !important;
 }
