--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,9 @@
 .bucket-path {
   display: flex;
   background-color: #f7f7f7a9;
-  // padding: 10px;
+  padding-right: 20px;
+  padding-top: 4px;
+  padding-bottom: 4px;
   justify-content: space-between;
   border-bottom: 1px solid rgba(204, 204, 204, 0.541);
   div {
@@ -92,5 +94,5 @@
 }
 
 body {
-  overflow: hidden;
+  // overflow: hidden;
 }
