--- a/src/components/schema-form/SchemaForm.scss
+++ b/src/components/schema-form/SchemaForm.scss
@@ -3,7 +3,11 @@
 }
 
 .button-fit-content {
-  align-self: flex-end;
+  display: flex !important;
+  margin-top: 2.2rem !important;
+  margin-bottom: auto !important;
+  vertical-align: middle !important;
+  justify-content: center;
 }
 
 .field-row {
