--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,3 @@
-$card-height: 300px;
-@media (max-width: 575.98px) {
-  $card-height: 200px;
-}
-
-// Small devices (landscape phones, less than 768px)
-@media (max-width: 767.98px) {
-  $card-height: 767px;
-}
-
-// Medium devices (tablets, less than 992px)
-@media (max-width: 991.98px) {
-  $card-height: 991px;
-}
-
-// Large devices (desktops, less than 1200px)
-@media (max-width: 1199.98px) {
-  $card-height: 1199px;
+.modal > .content > .segment {
+  background-color: #f7f7f7a9 !important;
 }
