--- a/src/components/modules/BucketSettings/bucket-settings.css
+++ b/src/components/modules/BucketSettings/bucket-settings.css
@@ -3,9 +3,7 @@
   padding: 6px;
   display: flex;
   justify-content: space-between;
-  .bucket-buttons {
-    div.ui {
-      margin-right: 8px;
-    }
-  }
+}
+.bucket-bar .bucket-buttons div.ui {
+  margin-right: 8px;
 }
